<resources>
    <string name="app_name">Nadzornik Zdravil</string>
    <string name="title_home">Pregled</string>
    <string name="title_notifications">Obvestila</string>

    <!--    buttons-->
    <string name="bt_add_medical">Dodaj zdravilo</string>
    <string name="bt_save_medical">Shrani zdravilo</string>

    <!--    screen titles-->
    <string name="screen_add_medical_title">Dodajanje zdravila</string>

    <!--    labels-->
    <string name="lbl_meds_name">Ime zdravila</string>
    <string name="lbl_meds_schedule">Urnik prejemanja zdravila</string>
    <string name="lbl_meds_every_day">Vsaki dan</string>
    <string name="lbl_time_to_take_meds">Ura prejetja zdravila </string>
    <string name="lbl_meds_every_day_at">Vsaki dan ob</string>
    <string name="lbl_meds_not_received">Zdravilo ni bilo prejeto!</string>
    <string name="lbl_meds_received">Zdravilo je bilo prejeto!</string>
    <string name="lbl_meds_received_late">Zdravilo je bilo prejeto s %d min zamudo!</string>

    <!--Toasts-->
    <string name="toast_event_saved">Opomnik je uspešno nastavljen</string>
</resources>