<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20px">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_meds_name" />

    <EditText
        android:id="@+id/et_meds_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/lbl_meds_schedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_meds_schedule" />

    <CheckBox
        android:id="@+id/cb_evey_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_meds_every_day"
        android:checked="true"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_time_to_take_meds" />

    <TimePicker
        android:id="@+id/meds_time_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/bt_save_meds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_save_medical" />


</LinearLayout>